--- a/filedownloader/src/main/res/layout/activity_main.xml
+++ b/filedownloader/src/main/res/layout/activity_main.xml
@@ -1,18 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/bn0"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="下载图片" />
+
+            <Button
+                android:id="@+id/bn1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="显示图片" />
+
+            <ImageView
+                android:id="@+id/iv0"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@android:color/darker_gray"
+                android:scaleType="fitCenter" />
+
+            <Button
+                android:id="@+id/bn2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="下载文本" />
+
+            <Button
+                android:id="@+id/bn3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="显示文本" />
+
+            <TextView
+                android:id="@+id/tv0"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="TextView" />
+
+            <Button
+                android:id="@+id/bn4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="下载apk" />
+
+            <Button
+                android:id="@+id/bn5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="安装apk" />
+
+            <Button
+                android:id="@+id/bn6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="下载自定义文件" />
+
+            <Button
+                android:id="@+id/bn7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="上传自定义文件" />
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
