--- a/filedownloader/src/main/res/layout/activity_main.xml
+++ b/filedownloader/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:background="@android:color/darker_gray"
-                android:scaleType="fitCenter" />
+                android:scaleType="fitCenter"
+                android:contentDescription="TODO" />
 
             <Button
                 android:id="@+id/bn2"
