--- a/stylechange/src/main/res/values/colors.xml
+++ b/stylechange/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#9ede4037</color>
+    <color name="colorPrimaryDark">#9e661f1b</color>
+    <color name="colorAccent">#9ede4037</color>
+
+    <color name="blue">#e1374ade</color>
 </resources>
