--- a/stylechange/src/main/res/values/styles.xml
+++ b/stylechange/src/main/res/values/styles.xml
@@ -1,11 +1,18 @@
+<?xml version="1.0"?>
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style parent="Theme.AppCompat.Light.NoActionBar" name="AppTheme">
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style parent="Theme.AppCompat.Light.NoActionBar" name="Blue">
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/blue</item>
+    <item name="colorPrimaryDark">@color/blue</item>
+    <item name="colorAccent">@color/blue</item>
     </style>
 
 </resources>
